# cerebro

./: Cargo.toml  default.nix  derivation.nix  overlay.nix
src/: config.rs  error.rs  event_manager.rs  events.rs  filesystem.rs  main.rs  triggers.rs
src/modules/: battery.rs  brightness.rs  cpu.rs  memory.rs  mod.rs  module.rs  trash.rs
