[package]
name = "cerebro"
version = "1.0.0"
authors = ["Mathieu Hardy <mhardy2008@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"

dirs = "3.0.2"

env_logger = "0.7"

fuse = { git = "https://github.com/zargony/fuse-rs" }

lazy_static = "1.4.0"

libc = "0.2.98"

log = "0.4.14"

log4rs = "1.0.0"

notify = "4.0.17"

regex = "1"

sensors = "0.2.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

shellwords = "1.0.0"

systemstat = "0.1.8"

walkdir = "2.3.2"
